Revision history for exact::cli

{{$NEXT}}

1.06      2022-03-19 17:35:12-07:00 America/Los_Angeles
        - Minor documentation update

1.05      2021-01-13 11:13:57-08:00 America/Los_Angeles
        - Override some minimum version reqs in dist.ini

1.04      2021-01-10 15:50:11-08:00 America/Los_Angeles
        - Migrate to Test2::V0
        - Improve .gitignore file
        - License migrate to Artistic 2.0
        - Migrate Travis CI and Coveralls to GitHub Actions and Codecov
        - Update copyright year

1.03      2019-08-26 15:12:32-07:00 America/Los_Angeles
        - Removed support for Perl versions prior to 5.14

1.02      2019-08-26 14:39:44-07:00 America/Los_Angeles
        - Changed to use "-" prepending flags for compile check w00t
        - Add back dist.ini components

1.01      2019-08-08 11:13:36-07:00 America/Los_Angeles
        - First version, released on an unsuspecting world.