@@ -4,7 +4,7 @@ exact::cli - Command-line interface helper utilities extension for exact
 
 # VERSION
 
-version 1.06
+version 1.07
 
 [![test](https://github.com/gryphonshafer/exact-cli/workflows/test/badge.svg)](https://github.com/gryphonshafer/exact-cli/actions?query=workflow%3Atest)
 [![codecov](https://codecov.io/gh/gryphonshafer/exact-cli/graph/badge.svg)](https://codecov.io/gh/gryphonshafer/exact-cli)
